allow combining IBSpectra objects
- add CombinedIBSpectra class
- add combineProteinGroups() method
- add combineIBSpectras() method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ import("methods")
 importClassesFrom(Biobase, AnnotatedDataFrame, AssayData, eSet,
                   Versioned, VersionedBiobase, Versions)
 
+import("Matrix")
 import("distr")
 import("dplyr")
 
