--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Author: Florian P Breitwieser <florian.bw@gmail.com> and
 Maintainer: Florian P Breitwieser <florian.bw@gmail.com>
 biocViews: Proteomics, MassSpectrometry, Bioinformatics, MultipleComparisons, QualityControl
 Depends: R (>= 3.1.0), Biobase, stats, methods
-Imports: distr, dplyr
+Imports: distr, dplyr, Matrix
 Suggests: MSnbase, OrgMassSpecR, XML, biomaRt, ggplot2, RJSONIO, Hmisc, gplots, RColorBrewer, gridExtra, limma, boot, distr, DBI, MASS
 LazyLoad: yes
 License: LGPL-2
