replace plyr by dplyr
it's maintained, on average faster and the code is simpler

- isobar.parallel replaced by isobar.cluster
- some parallelization was disabled (see FIXME), but it should
  be easy to restore using multidplyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,10 +1,10 @@
 # IMPORT
 import("methods")
-importClassesFrom(Biobase, AnnotatedDataFrame, AssayData, eSet, 
+importClassesFrom(Biobase, AnnotatedDataFrame, AssayData, eSet,
                   Versioned, VersionedBiobase, Versions)
 
 import("distr")
-import("plyr")
+import("dplyr")
 
 # EXPORT
 exportClasses(IBSpectra,ProteinGroup)
