--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Author: Florian P Breitwieser <florian.bw@gmail.com> and
    Xavier Robin <xavier.robin@unige.ch> and Florent Gluck  <florent.gluck@unige.ch>
 Maintainer: Florian P Breitwieser <florian.bw@gmail.com>
 biocViews: Proteomics, MassSpectrometry, Bioinformatics, MultipleComparisons, QualityControl
-Depends: R (>= 2.10.0), Biobase, stats, methods
-Imports: distr, plyr
+Depends: R (>= 3.1.0), Biobase, stats, methods
+Imports: distr, dplyr
 Suggests: MSnbase, OrgMassSpecR, XML, biomaRt, ggplot2, RJSONIO, Hmisc, gplots, RColorBrewer, gridExtra, limma, boot, distr, DBI, MASS
 LazyLoad: yes
 License: LGPL-2
